# crypto-futures-monitor-alert

./: .gitignore  .monitor_rule_toggles.json  README.md  config.yaml  pyproject.toml  requirements.txt  run.sh  setup.py
docs/: coverage-preview.html  monitor-architecture-review.canvas.tsx  监控告警系统部署文档.md  监控告警系统重构方案.md  监控覆盖面示意图.md  目标架构方案.html  需求说明.md
pip-wheel-metadata/crypto_futures_monitor_alert-0.1.0.dist-info/: METADATA
pip-wheel-metadata/crypto_futures_monitor_alert.egg-info/: SOURCES.txt  entry_points.txt
src/crypto_futures_monitor/: alert_enrich.py  alert_format.py  alerts.py  alt_monitor.py  binance.py  coingecko.py  dashboard.py  data_freshness.py  discord.py  main.py  metrics.py  models.py  recent_buffer.py  rule_toggles.py  settings.py  watchlist.py  wecom.py
src/crypto_futures_monitor_alert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
