[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-futures-monitor-alert"
version = "0.1.0"
description = "币安 U 本位合约监控告警"
requires-python = ">=3.8"
dependencies = [
  "httpx>=0.27,<1",
  "websockets>=12,<14",
  "PyYAML>=6,<7",
  "aiohttp>=3.9,<4",
]

[project.scripts]
futures-monitor = "crypto_futures_monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]
